# urnas

./: .env.example  .gitignore  Makefile
bot/: main.py  pyproject.toml
bot/application/: bot.py  settings.py
client/: Makefile  package.json  tailwind.config.js  webpack.config.js
client/public/templates/common/: root.html
client/src/: app.js
client/src/application/: App.vue
server/: Makefile  pyproject.toml
server/candidates/: apps.py  consumers.py  models.py  serializers.py  signals.py  tasks.py  views.py
server/candidates/migrations/: 0001_initial.py
server/core/: __init__.py  asgi.py  celery.py  settings.py  urls.py  views.py
